# data-quality-cleaning-api

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
data/: sample_leads.csv
docs/: openapi.json  rapidapi_listing.md
examples/: csv_profile_request.json  records_clean_request.json  records_clean_response.json
outputs/sample_report/: lead_quality_report.typ
scripts/: export_openapi.py
src/data_quality_api/: __main__.py  api.py  cleaning.py  domain_tools.py  email_tools.py  models.py  phone_tools.py  profiling.py  reporting.py  service_controls.py  settings.py
tests/: test_api.py  test_cleaning.py  test_csv.py  test_email_phone_domain.py  test_reporting.py
