[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-cleaning-api"
version = "0.1.0"
description = "RapidAPI-ready FastAPI service for CRM lead-list cleaning and data quality checks."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Emir Huseyin Inci" }]
dependencies = [
    "email-validator>=2.1",
    "fastapi>=0.115",
    "pandas>=2.1",
    "phonenumbers>=8.13",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "python-dateutil>=2.9",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
data-quality-api = "data_quality_api.api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=data_quality_api --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008"]

[tool.coverage.run]
omit = ["src/data_quality_api/__main__.py"]
